# py-sub-session

./: .gitignore  LICENSE  README.md  noxfile.py  pyproject.toml
subsession/: __init__.py
tests/: test_subsession.py
tests/fixtures/dummy_pkg/: __init__.py
